@@ -1199,10 +1199,20 @@ $wgMessageStructure = array(
 	),
 	'statistics' => array(
 		'statistics',
-		'sitestats',
-		'userstats',
-		'sitestatstext',
-		'userstatstext',
+		'statistics-header-pages',
+		'statistics-header-edits',
+		'statistics-header-views',
+		'statistics-header-users',
+		'statistics-articles',
+		'statistics-pages',
+		'statistics-files',
+		'statistics-edits',
+		'statistics-edits-average',
+		'statistics-views-total',
+		'statistics-views-peredit',
+		'statistics-jobqueue',
+		'statistics-users',
+		'statistics-users-active',
 		'statistics-mostpopular',
 		'statistics-footer',
 	),
